# Practice

AI/YoloV5/: README.md  combine.py  label.py  rename.py
Android/Fragment_Prac/: settings.gradle
Android/Fragment_Prac/app/: build.gradle
Android/Fragment_Prac/gradle/wrapper/: gradle-wrapper.properties
Android/HLS_Streaming_Prac/: settings.gradle
Android/HLS_Streaming_Prac/app/: build.gradle
Android/JNI_Prac/: settings.gradle
Android/JNI_Prac/app/: build.gradle
Android/JetpackCompose_Prac/: settings.gradle.kts
Android/JetpackCompose_Prac/app/: build.gradle.kts
Android/MVVM_Prac/: settings.gradle
Android/MVVM_Prac/app/: build.gradle
Arduino/: README.md
Arduino/PROJECT_TOY/: Lottery.ino
C++/thread_mutex/: thread_mutex.sln
C++/thread_mutex/thread_mutex/: Main.cpp  Thread.cpp  Thread.h  thread_mutex.vcxproj  thread_mutex.vcxproj.filters
C++/virtual/: virtual.sln
C++/virtual/virtual/: virtual.vcxproj  virtual.vcxproj.filters  virtualPractice.cpp
CMake/CMake_Archive/: CMakeLists.txt
CMake/CMake_Archive/includes/: myClass.h
CMake/CMake_Archive/src/: main.cpp  myClass.cpp
LinuxC/Pthread/: main.c
LinuxC/SysCall_Kernel/: I2C_Kernel.c  I2C_Use.c  I2C_makfile.txt  Syscall.c  kernel.c  makefile.txt
Python/FLASK/: app.py  dbtest.py  model.py  soup.py  test2.py
Python/FLASK/static/: index.js  main.css  sign.css
Python/FLASK/templates/: main.html  movieInfo.html  sign.html  signIn.html  signUp.html  temp.html
WEB/NodeJS/: package-lock.json  package.json
WEB/VueJS2/vuex_start/: package-lock.json  package.json
(+68 files in other folders)
